...
          .opacity(0.4)
          .padding(.leading)

        ZStack(alignment: .topLeading) {
          Accent()
          Text(latestDay?.note ?? "")
            .accessibilityIdentifier("NoteTextView")
            .accessibilityAddTraits(.isButton)
            .font(.system(.body, weight: colorScheme == .dark ? .light : .regular))
            .lineSpacing(2.0)
            .padding(.horizontal)
            .contextMenu { NoteContextMenu() }
        }
...
          DayData.deleteNote(for: latestDay, context: viewContext)
        }
      }
    ) {
      Label("Delete", systemImage: "trash")
    }
    .accessibilityIdentifier("NoteDeleteContextButton")
  }
}

