...
      label: {
        Image(systemName: "chevron.backward")
          .brightness(0.07)
          .saturation(1.05)
      }
    )
    .accessibilityIdentifier("NoteCloseButton")
    .tint(.orange)
  }

  @ViewBuilder private var doneButton: some View {
    Button(
      action: {
...
